crates/plissken-core/src/render/snapshots/plissken_core__render__module_renderer__snapshot_tests__complex_python_module.snap
---
source: crates/plissken-core/src/render/module_renderer.rs
expression: "&pages[0].content"
---
# api <span class="plissken-badge plissken-badge-source" style="display: inline-block; padding: 0.1em 0.35em; font-size: 0.55em; font-weight: 600; border-radius: 0.2em; vertical-align: middle; background: #1976d2; color: white;">Python</span>


API module for external interactions.

Provides client classes and utility functions.

## Variables

| Name | Type | Description |
|------|------|-------------|
| `API_VERSION` | `str` | Current API version |

## Classes

### `class Client`

HTTP client for API requests.

Handles authentication and rate limiting.

#### Attributes

| Name | Type | Description |
|------|------|-------------|
| `base_url` | `str` |  |
| `timeout` | `float` |  |

#### Methods

##### `__init__`

<div style="background: #f5f5f5; padding: 0.75em 1em; border-radius: 0.375em; border-left: 3px solid #1976d2; margin-bottom: 1em;">
<code style="color: #333333; font-family: monospace;"><span style="color: #1976d2; font-weight: 600;">__init__</span>(self, base_url: str, timeout: float = 30.0)</code>
</div>



##### `get` <span class="plissken-badge plissken-badge-async" style="display: inline-block; padding: 0.1em 0.35em; font-size: 0.55em; font-weight: 600; border-radius: 0.2em; vertical-align: middle; background: #1976d2; color: white;">async</span>


<div style="background: #f5f5f5; padding: 0.75em 1em; border-radius: 0.375em; border-left: 3px solid #1976d2; margin-bottom: 1em;">
<code style="color: #333333; font-family: monospace;"><span style="color: #ff4081;">async </span><span style="color: #1976d2; font-weight: 600;">get</span>(self, path: str) -> <span style="color: #757575;">Response</span></code>
</div>

Perform GET request

**Parameters:**

| Name | Type | Description |
|------|------|-------------|
| `self` | `-` |  |
| `path` | `str` |  |




##### `post` <span class="plissken-badge plissken-badge-async" style="display: inline-block; padding: 0.1em 0.35em; font-size: 0.55em; font-weight: 600; border-radius: 0.2em; vertical-align: middle; background: #1976d2; color: white;">async</span>


<div style="background: #f5f5f5; padding: 0.75em 1em; border-radius: 0.375em; border-left: 3px solid #1976d2; margin-bottom: 1em;">
<code style="color: #333333; font-family: monospace;"><span style="color: #ff4081;">async </span><span style="color: #1976d2; font-weight: 600;">post</span>(self, path: str, data: dict) -> <span style="color: #757575;">Response</span></code>
</div>

Perform POST request

**Parameters:**

| Name | Type | Description |
|------|------|-------------|
| `self` | `-` |  |
| `path` | `str` |  |
| `data` | `dict` |  |






## Functions

### `create_client`

<div style="background: #f5f5f5; padding: 0.75em 1em; border-radius: 0.375em; border-left: 3px solid #1976d2; margin-bottom: 1em;">
<code style="color: #333333; font-family: monospace;"><span style="color: #1976d2; font-weight: 600;">create_client</span>(config: Config) -> <span style="color: #757575;">Client</span></code>
</div>

Factory function to create a configured client

**Parameters:**

| Name | Type | Description |
|------|------|-------------|
| `config` | `Config` |  |
