crates/plissken-core/src/render/snapshots/plissken_core__render__module_renderer__snapshot_tests__complex_rust_module.snap
---
source: crates/plissken-core/src/render/module_renderer.rs
expression: "&pages[0].content"
---
# crate::engine <span class="plissken-badge plissken-badge-source" style="display: inline-block; padding: 0.1em 0.35em; font-size: 0.55em; font-weight: 600; border-radius: 0.2em; vertical-align: middle; background: #ff5722; color: white;">Rust</span>


Core processing engine.

Provides the main computation pipeline.

## Structs

### `crate::engine::Engine`<T: Process>

<span class="plissken-badge plissken-badge-visibility" style="display: inline-block; padding: 0.1em 0.35em; font-size: 0.55em; font-weight: 600; border-radius: 0.2em; vertical-align: middle; background: #4caf50; color: white;">pub</span>


**Derives:** `Debug`

Main processing engine

#### Fields

| Name | Type | Description |
|------|------|-------------|
| `state` | `State` | Current engine state |
| `processor` | `T` | Item processor |

#### Methods

##### `new` <span class="plissken-badge plissken-badge-visibility" style="display: inline-block; padding: 0.1em 0.35em; font-size: 0.55em; font-weight: 600; border-radius: 0.2em; vertical-align: middle; background: #4caf50; color: white;">pub</span>


```rust
pub fn new(processor: T) -> Self
```

Create new engine



##### `run` <span class="plissken-badge plissken-badge-visibility" style="display: inline-block; padding: 0.1em 0.35em; font-size: 0.55em; font-weight: 600; border-radius: 0.2em; vertical-align: middle; background: #4caf50; color: white;">pub</span>
 <span class="plissken-badge plissken-badge-async" style="display: inline-block; padding: 0.1em 0.35em; font-size: 0.55em; font-weight: 600; border-radius: 0.2em; vertical-align: middle; background: #1976d2; color: white;">async</span>


```rust
pub async fn run(&mut self) -> Result<(), Error>
```

Run the engine





## Enums

### `crate::engine::State` <span class="plissken-badge plissken-badge-visibility" style="display: inline-block; padding: 0.1em 0.35em; font-size: 0.55em; font-weight: 600; border-radius: 0.2em; vertical-align: middle; background: #4caf50; color: white;">pub</span>


Engine state

#### Variants

- **`Idle`** - Engine is idle
- **`Running`** - Engine is running
- **`Error`** - Engine encountered an error



## Functions

### `crate::engine::default_engine`

<span class="plissken-badge plissken-badge-visibility" style="display: inline-block; padding: 0.1em 0.35em; font-size: 0.55em; font-weight: 600; border-radius: 0.2em; vertical-align: middle; background: #4caf50; color: white;">pub</span>


```rust
pub fn default_engine() -> Engine<DefaultProcessor>
```

Create engine with default processor
