crates/plissken-core/src/render/snapshots/plissken_core__render__module_renderer__snapshot_tests__python_module_with_function.snap
---
source: crates/plissken-core/src/render/module_renderer.rs
expression: "&pages[0].content"
---
# utils <span class="plissken-badge plissken-badge-source" style="display: inline-block; padding: 0.1em 0.35em; font-size: 0.55em; font-weight: 600; border-radius: 0.2em; vertical-align: middle; background: #1976d2; color: white;">Python</span>


Utility functions

## Functions

### `utils.process`

<div style="background: #f5f5f5; padding: 0.75em 1em; border-radius: 0.375em; border-left: 3px solid #1976d2; margin-bottom: 1em;">
<code style="color: #333333; font-family: monospace;"><span style="color: #1976d2; font-weight: 600;">process</span>(data: bytes) -> <span style="color: #757575;">str</span></code>
</div>

Process the input data.

**Parameters:**

| Name | Type | Description |
|------|------|-------------|
| `data` | `bytes` | The input data to process |


**Returns:**

The processed result
