crates/plissken-core/src/render/snapshots/plissken_core__render__module_renderer__snapshot_tests__rust_async_unsafe_function.snap
---
source: crates/plissken-core/src/render/module_renderer.rs
expression: "&pages[0].content"
---
# low_level <span class="plissken-badge plissken-badge-source" style="display: inline-block; padding: 0.1em 0.35em; font-size: 0.55em; font-weight: 600; border-radius: 0.2em; vertical-align: middle; background: #ff5722; color: white;">Rust</span>


## Functions

### `fn dangerous_read`

<span class="plissken-badge plissken-badge-visibility" style="display: inline-block; padding: 0.1em 0.35em; font-size: 0.55em; font-weight: 600; border-radius: 0.2em; vertical-align: middle; background: #4caf50; color: white;">pub</span>


```rust
pub async unsafe fn dangerous_read(ptr: *const u8, len: usize) -> Vec<u8>
```

Read from raw pointer asynchronously.

# Safety
Pointer must be valid and properly aligned.
