crates/plissken-core/src/render/snapshots/plissken_core__render__module_renderer__snapshot_tests__rust_enum_with_variants.snap
---
source: crates/plissken-core/src/render/module_renderer.rs
expression: "&pages[0].content"
---
# crate::types <span class="plissken-badge plissken-badge-source" style="display: inline-block; padding: 0.1em 0.35em; font-size: 0.55em; font-weight: 600; border-radius: 0.2em; vertical-align: middle; background: #ff5722; color: white;">Rust</span>


## Enums

### `crate::types::Result`<T, E> <span class="plissken-badge plissken-badge-visibility" style="display: inline-block; padding: 0.1em 0.35em; font-size: 0.55em; font-weight: 600; border-radius: 0.2em; vertical-align: middle; background: #4caf50; color: white;">pub</span>


Operation result type.

Represents success or failure of an operation.

#### Variants

- **`Ok`** - Operation succeeded with value
- **`Err`** - Operation failed with error
